tests/compile_fail/from_str/enum_variant_field.stderr
error: only enums with no fields can derive `FromStr`
 --> tests/compile_fail/from_str/enum_variant_field.rs:4:10
  |
4 |     Tuple(i32),
  |          ^^^^^
